Updates from Overleaf

--- a/main.bib
+++ b/main.bib
@@ -283,7 +283,7 @@ abstract = {This work presents two software components aimed to relieve the cost
     url = {https://plot.ly} }
 
 @INPROCEEDINGS{2022ASPC..532..537L,
-       author = {{Lam}, Marco C. and {Lam}, Marco C. and {Smith}, Robert J. and {Veich-Michaelis}, Josh and {Veich-Michaelis}, Josh and {Steele}, Iain A. and {McWhirter}, Paul R.},
+       author = {{Lam}, Marco C. and {Smith}, Robert J. and {Veich-Michaelis}, Josh and {Steele}, Iain A. and {McWhirter}, Paul R.},
         title = "{An Update on the Development of ASPIRED}",
     booktitle = {Astronomical Society of the Pacific Conference Series},
          year = 2022,
@@ -298,14 +298,12 @@ abstract = {This work presents two software components aimed to relieve the cost
 
 @software{marco_2021_4463569,
   author       = {{Lam}, Marco C},
-  title        = {{cylammarco/ASPIRED: Initial Development Release 
-                   v0.3.1}},
-  month        = jan,
-  year         = 2021,
+  title        = {{ASPIRED: A Python-based spectral data reduction toolkit}},
+  month        = feb,
+  year         = 2023,
   publisher    = {Zenodo},
-  version      = {0.3.1},
-  doi          = {10.5281/zenodo.4463569},
-  url          = {https://doi.org/10.5281/zenodo.4463569}
+  doi          = {10.5281/zenodo.7632106},
+  url          = {https://doi.org/10.5281/zenodo.7632106}
 }
 
 @ARTICLE{2013PASP..125.1031B,
@@ -1144,7 +1142,7 @@ archivePrefix = {arXiv},
   month        = apr,
   year         = 2023,
   publisher    = {Zenodo},
-  version      = {v‎1.0.1},
-  doi          = {10.5281/zenodo.7865549},
-  url          = {https://doi.org/10.5281/zenodo.7865549}
+  version      = {v‎1.0.2},
+  doi          = {10.5281/zenodo.7879105},
+  url          = {https://doi.org/10.5281/zenodo.7879105}
 }
