Updates from Overleaf

--- a/main.bib
+++ b/main.bib
@@ -1146,3 +1146,43 @@ archivePrefix = {arXiv},
   doi          = {10.5281/zenodo.7879105},
   url          = {https://doi.org/10.5281/zenodo.7879105}
 }
+
+@software{nicholas_earl_2023_7803739,
+  author       = {Nicholas Earl and
+                  Erik Tollerud and
+                  Ricky O'Steen and
+                  brechmos and
+                  Wolfgang Kerzendorf and
+                  Ivo Busko and
+                  shaileshahuja and
+                  Dan D'Avella and
+                  Thomas Robitaille and
+                  Adam Ginsburg and
+                  P. L. Lim and
+                  Derek Homeier and
+                  Brigitta Sipőcz and
+                  Jesse Averbukh and
+                  James Tocknell and
+                  Brian Cherinka and
+                  Sara Ogaz and
+                  Robel Geda and
+                  James Davies and
+                  Kyle Conroy and
+                  Hans Moritz Günther and
+                  Kyle Barbary and
+                  Jonathan Foster and
+                  Michael Droettboom and
+                  Duy Tuong Nguyen and
+                  E. M. Bray and
+                  Andy Casey and
+                  Peter Teuben and
+                  Steve Crawford and
+                  Henry Ferguson},
+  title        = {astropy/specutils: v1.10.0},
+  month        = apr,
+  year         = 2023,
+  publisher    = {Zenodo},
+  version      = {v1.10.0},
+  doi          = {10.5281/zenodo.7803739},
+  url          = {https://doi.org/10.5281/zenodo.7803739}
+}
