Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -98,13 +98,13 @@
 \usepackage{multirow}
 \usepackage{fancyvrb}
 %% Reintroduced the \received and \accepted commands from AASTeX v5.2
-%\received{March 1, 2021}
-%\revised{April 1, 2021}
-%\accepted{\today}
+\received{January 31, 2023}
+\revised{May 18, 2023}
+\accepted{May 18, 2023}
 
 %% Command to document which AAS Journal the manuscript was submitted to.
 %% Adds "Submitted to " the argument.
-\submitjournal{AJ}
+%\submitjournal{AJ}
 
 %% For manuscript that include authors in collaborations, AASTeX v6.31
 %% builds on the \collaboration command to allow greater freedom to 
@@ -1301,7 +1301,7 @@ not agree in the overlapping wavelength range, as polynomials tend to run away
 at the edges of the fitted range of the wavelength solution. In the middle,
 the TNG/DOLORES case shows a simultaneous tracing of a common proper
 motion system (three bodies resolved as two components) containing an M dwarf
-and a pair of eclipsing M dwarf--white dwarf binary~\citep{2022MNRAS.509.4171K},
+and an eclipsing M dwarf--white dwarf binary~\citep{2022MNRAS.509.4171K},
 separated by 5'' incident on the same long-slit in a single exposure.
 At the bottom is a set of three spectra taken with WHT/ISIS and ACAM.
 It demonstrates the reduction of a set of data with extremely low S/N
